# inferengine

./: CMakeLists.txt  README.md  build.sh  kill.sh
examples/algo/: CMakeLists.txt  test_common.hpp  test_video_detector.cpp
examples/infer/: CMakeLists.txt  test_classifier.cpp  test_fasterrcnn.cpp  test_maskrcnn.cpp  test_ssd.cpp
include/: detector.hpp  detector_types.hpp  detector_version.hpp  detector_version.hpp.in  video_tracker.hpp
models/: faster_rcnn.json  faster_rcnn_fpn.json  mask_rcnn.json  ssd.json
src/algo/: CMakeLists.txt
src/algo/detector/: detector.cpp  detector_impl.cpp  detector_impl.hpp  detector_types.cpp
src/algo/tracker/: Hungarian.cpp  Hungarian.h  kcf.cpp  kcf.hpp  tracker.cpp  tracker.h  video_tracker.cpp
src/infer/: CMakeLists.txt  infer.cpp  infer.h  infer_creator.cpp  infer_creator.hpp
src/infer/libtorch/: anchors.cpp  anchors.hpp  classifier.cpp  classifier.h  fasterrcnn.cpp  fasterrcnn.h  fasterrcnnfpn.cpp  fasterrcnnfpn.h  maskrcnn.cpp  maskrcnn.h  nms.h  nms_cpu.cpp  nms_kernel.cu  nms_layer.cpp  nms_layer.h  nms_layer_cuda.cu  roi_align.h  roi_align_cuda.cpp  roi_align_kernel.cu  roi_align_kernel_v2.cu  ssd.cpp  ssd.h
src/utils/: logging.hpp  timer.hpp
